# rstparse2

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  docs  download_assets.py  main.py  notes.md  pyproject.toml  raw_code.code  requirements.txt  test_openai_api.ps1  test_openai_api.sh
static/: index.html
static/css/: chat.css
static/js/: chat.js
