[project]
name = "rag-sphinx-pipeline"
version = "0.1.0"
description = "A RAG pipeline for Sphinx documentation using vector embeddings and PostgreSQL with pgvector"
authors = [
    {name = "RAG Pipeline", email = "example@example.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "psycopg2-binary",
    "pgvector",
    "docutils",
    "mistralai>=1.0.0",
    "openai",
    "yake",
    "fastapi",
    "uvicorn[standard]",
    "requests"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 88

[project.scripts]
rag-setup = "main:setup_database"
rag-cli = "main:main"
rag-web = "app:main"
